updating body of one news

--- a/_posts/2013-07-10-introducing-instagram-web-embeds--instagram-blog.html
+++ b/_posts/2013-07-10-introducing-instagram-web-embeds--instagram-blog.html
@@ -7,6 +7,6 @@ domain: blog.instagram.com
 image: 
 ---
 
-<p></p>
+<p>Today, we’re excited to introduce web embedding for Instagram content and bring you an easy way to add Instagram photos and videos to the stories you want to tell.Now, when you visit an Instagram photo or video page on your desktop web browser, you’ll see a new share button on the right side of your photo (just under the comments button).Click the button to see the embed code.Copy the block of text it gives you and paste it into your blog, website or article.When you hit publish, the photo or video will appear.</p>
 <center><p><a href="http://blog.instagram.com/post/55095847329/introducing-instagram-web-embeds" style='padding:25px; font-sze:18px; font-weight: bold;'>Read Full Story</a></p></center>
 
