--- a/_posts/2012-12-29-ninja-blocks.html
+++ b/_posts/2012-12-29-ninja-blocks.html
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: 'Ninja Blocks'
-url: https://ninjablocks.com/products/ninja-blocks-kit
-source: https://ninjablocks.com/products/ninja-blocks-kit
-domain: ninjablocks.com
+url: http://shop.ninjablocks.com/products/ninja-blocks-kit
+source: http://shop.ninjablocks.com/products/ninja-blocks-kit
+domain: shop.ninjablocks.com
 image: http://kinlane-productions.s3.amazonaws.com/ap-evangelist-site/curated/screenshots/9352_api500_com.png
 ---
 
