--- a/_posts/2014-07-16-web-components-part-2.html
+++ b/_posts/2014-07-16-web-components-part-2.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: 'Web Components: Part 2'
-url: https://developer.pearson.com/blog/web-components-part-2/
-source: https://developer.pearson.com/blog/web-components-part-2/
+url: http://developer.pearson.com/blog/web-components-part-2
+source: http://developer.pearson.com/blog/web-components-part-2
 domain: developer.pearson.com
 image: http://kinlane-productions.s3.amazonaws.com/screen-capture-api/developer-pearson-comblogweb-components-part-2.png
 ---
