--- a/_posts/2014-07-25-pro-tip-for-embedding-tweets-use-the-oembed-api-endpoint.html
+++ b/_posts/2014-07-25-pro-tip-for-embedding-tweets-use-the-oembed-api-endpoint.html
@@ -4,7 +4,7 @@ title: 'Pro tip for embedding Tweets: use the oEmbed API endpoint'
 url: https://blog.twitter.com/2014/pro-tip-for-embedding-tweets-use-the-oembed-api-endpoint
 source: https://blog.twitter.com/2014/pro-tip-for-embedding-tweets-use-the-oembed-api-endpoint
 domain: blog.twitter.com
-image: 
+image: http://kinlane-productions.s3.amazonaws.com/screen-capture-api/blog-twitter-com2014pro-tip-for-embedding-tweets-use-the-oembed-api-endpoint.png
 ---
 
 <p>Embedded Tweets allow you to embed any Tweet directly into a website or web app.Developers can take advantage of our oEmbed REST API endpoint to include Twitter content programmatically.The Twitter for Websites suite of products makes it easy to add interactive Twitter content to your website.Many content providers copy and paste the embed code found under the “more” action of a Tweet on Twitter.com.</p>
