--- a/_posts/2014-08-01-reproject-d3cartomap.html
+++ b/_posts/2014-08-01-reproject-d3cartomap.html
@@ -4,7 +4,7 @@ title: 'reproject d3.carto.map'
 url: http://bl.ocks.org/mpmckenna8/f6245adc7a3cd3930a11
 source: http://bl.ocks.org/mpmckenna8/f6245adc7a3cd3930a11
 domain: bl.ocks.org
-image: 
+image: http://kinlane-productions.s3.amazonaws.com/screen-capture-api/bl-ocks-orgmpmckenna8f6245adc7a3cd3930a11.png
 ---
 
 <p>NOT FOUND</p>
