--- a/_posts/2013-05-09-salesforce-acquires-visual-web-clipping-service-clipboard.html
+++ b/_posts/2013-05-09-salesforce-acquires-visual-web-clipping-service-clipboard.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: 'Salesforce acquires visual web clipping service Clipboard'
-url: http://gigaom.com/2013/05/09/salesforce-acquires-visual-web-clipping-service-clipboard/
-source: http://gigaom.com/2013/05/09/salesforce-acquires-visual-web-clipping-service-clipboard/
+url: https://gigaom.com/2013/05/09/salesforce-acquires-visual-web-clipping-service-clipboard/
+source: https://gigaom.com/2013/05/09/salesforce-acquires-visual-web-clipping-service-clipboard/
 domain: gigaom.com
 image: http://kinlane-productions.s3.amazonaws.com/ap-evangelist-site/curated/screenshots/gigaom-com20130509salesforce-acquires-visual-web-clipping-service-clipboard.png
 ---
