Updating _posts/2013-06-04-displaying-documents-from-teamlab-office-directly-on-your-webpage.html via Laneworks CMS Publish

--- a/_posts/2013-06-04-displaying-documents-from-teamlab-office-directly-on-your-webpage.html
+++ b/_posts/2013-06-04-displaying-documents-from-teamlab-office-directly-on-your-webpage.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: 'Displaying Documents from TeamLab Office Directly on Your Webpage'
-url: https://www.onlyoffice.com/blog/2013/06/embedding-documents/
-source: https://www.onlyoffice.com/blog/2013/06/embedding-documents/
+url: http://www.onlyoffice.com/blog/2013/06/embedding-documents/
+source: http://www.onlyoffice.com/blog/2013/06/embedding-documents/
 domain: www.onlyoffice.com
 image: http://kinlane-productions.s3.amazonaws.com/ap-evangelist-site/curated/screenshots/9529_www_teamlab_com.png
 ---
