Updating _posts/2015-03-31-curator-twitters-answer-to-storify-is-now-publicly-open-to-media-organizations.html via Laneworks Publish

--- a/_posts/2015-03-31-curator-twitters-answer-to-storify-is-now-publicly-open-to-media-organizations.html
+++ b/_posts/2015-03-31-curator-twitters-answer-to-storify-is-now-publicly-open-to-media-organizations.html
@@ -1,11 +1,9 @@
 ---
 layout: post
-title: 'Curator, Twitter’s answer to Storify, is now publicly open to media organizations'
+title: 'Curator, Twitter&acirc;s answer to Storify, is now publicly open to media organizations'
 url: http://thenextweb.com/apps/2015/03/31/curator-twitters-answer-to-storify-is-now-publicly-open-to-media-organizations/
 source: http://thenextweb.com/apps/2015/03/31/curator-twitters-answer-to-storify-is-now-publicly-open-to-media-organizations/
 domain: thenextweb.com
 image: http://kinlane-productions.s3.amazonaws.com/screen-capture-api/thenextweb-comapps20150331curator-twitters-answer-to-storify-is-now-publicly-open-to-media-organizations.png
 ---
 
-<p>Earlier this year, Twitter teased Curator, its own media aggregation tool that combines select tweets and vines into an embeddable collection.Today, Curator is now publicly available to media organizations.Those qualified to try out the free service can head to curator.twitter.com and sign in with their Twitter account.</p>
-
