Updating building-blocks.html via Laneworks CMS Publish

--- a/building-blocks.html
+++ b/building-blocks.html
@@ -4,44 +4,8 @@ title: 'Building Blocks'
 ---
 <p>These are the common building blocks I have pullled from my research so far.
 <table width="100%" border="0"><tr>
-<td align="left" valign="top" style="padding-left:10px; padding-bottom:5px; background-color: #E0E0E0;">
-<h2>Formats</h2>
+<td>
+<hr>
 </td>
 </tr>
-<tr>
-<td align="left" valign="top">
-<ul>
-<li><strong>Open Graph Protocol</strong> - The Open Graph protocol enables any web page to become a rich object in a social graph, by embedding of simple tags in the pages header that describe objects.</li>
-<li><strong>oEmbed</strong> - Format for allowing an embedded representation of a URL on third party sites to display embedded content (such as photos or videos) when a user posts a link to that resource.</li>
-</ul>
-</td>
-</tr>
-<tr>
-<td align="left" valign="top" style="padding-left:10px; padding-bottom:5px; background-color: #E0E0E0;">
-<h2>Tools</h2>
-</td>
-</tr>
-<tr>
-<td align="left" valign="top">
-<ul>
-<li><strong>Bookmarklet</strong> - <p>A bookmarklet that can be added to the toolbar of a browser, and quickly push data to an API.</p></li>
-<li><strong>Widgets</strong> - Widgets are highly functional, API driven JavaScript tools that provide portable applications that can be embedded on any website or application. </li>
-<li><strong>Badges</strong> - Badges are common for displaying content and resources delivered via an API and allow these assets to be embedded on any website or application. </li>
-<li><strong>Buttons</strong> - Buttons are shareable snippets of code that often share, syndicate or trigger a variety of events that use APIs as their source.</li>
-</ul>
-</td>
-</tr>
-<tr>
-<td align="left" valign="top" style="padding-left:10px; padding-bottom:5px; background-color: #E0E0E0;">
-<h2>Engines</h2>
-</td>
-</tr>
-<tr>
-<td align="left" valign="top">
-<ul>
-<li><strong>Widget Builder</strong> - A widget builder provides a form that API consumers can use to configure a predefined widget that is integrated with an API, allowing them to customize and tailor the widget experience.</li>
-<li><strong>JavaScript API</strong> - A complete JavaScript API that developers can use to build and manage their own JavaScript integrations with an APIs resources, beyond existing widgets.</li>
-</ul>
-</td>
-</tr>
-</table></table>
+</table>
