--- a/building-blocks.html
+++ b/building-blocks.html
@@ -5,7 +5,7 @@ title: 'Building Blocks'
 <p>These are the common building blocks I have pullled from my research so far.
 <table width="100%" border="0"><tr>
 <td align="left" valign="top" style="padding-left:10px; padding-bottom:5px; background-color: #E0E0E0;">
-<h2>Formats</h2>
+<h2>Embed Formats</h2>
 </td>
 </tr>
 <tr>
@@ -18,13 +18,13 @@ title: 'Building Blocks'
 </tr>
 <tr>
 <td align="left" valign="top" style="padding-left:10px; padding-bottom:5px; background-color: #E0E0E0;">
-<h2>Tools</h2>
+<h2>Embeddable Tools</h2>
 </td>
 </tr>
 <tr>
 <td align="left" valign="top">
 <ul>
-<li><strong>Bookmarklet</strong> - <p>A bookmarklet that can be added to the toolbar of a browser, and quickly push data to an API.</p></li>
+<li><strong>Bookmarklet</strong> - A bookmarklet that can be added to the toolbar of a browser, and quickly push data to an API.</li>
 <li><strong>Widgets</strong> - Widgets are highly functional, API driven JavaScript tools that provide portable applications that can be embedded on any website or application. </li>
 <li><strong>Badges</strong> - Badges are common for displaying content and resources delivered via an API and allow these assets to be embedded on any website or application. </li>
 <li><strong>Buttons</strong> - Buttons are shareable snippets of code that often share, syndicate or trigger a variety of events that use APIs as their source.</li>
@@ -33,7 +33,7 @@ title: 'Building Blocks'
 </tr>
 <tr>
 <td align="left" valign="top" style="padding-left:10px; padding-bottom:5px; background-color: #E0E0E0;">
-<h2>Engines</h2>
+<h2>Embed Engines</h2>
 </td>
 </tr>
 <tr>
@@ -44,4 +44,4 @@ title: 'Building Blocks'
 </ul>
 </td>
 </tr>
-</table></table>
+</table>
