Updating _posts/2015-12-16-enhancements-to-the-classroom-share-button.html via Laneworks Publish

--- a/_posts/2015-12-16-enhancements-to-the-classroom-share-button.html
+++ b/_posts/2015-12-16-enhancements-to-the-classroom-share-button.html
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: 'Enhancements to the Classroom Share Button'
-url: http://googledevelopers.blogspot.com/2015/12/enhancements-to-classroom-share-button.html
-source: http://googledevelopers.blogspot.com/2015/12/enhancements-to-classroom-share-button.html
-domain: googledevelopers.blogspot.com
+url: http://googleappsdeveloper.blogspot.com/2015/12/enhancements-to-classroom-share-button.html
+source: http://googleappsdeveloper.blogspot.com/2015/12/enhancements-to-classroom-share-button.html
+domain: googleappsdeveloper.blogspot.com
 image: 
 ---
 
