--- a/companies.html
+++ b/companies.html
@@ -77,6 +77,21 @@ Brick is a collection of UI components designed for the easy and quick building 
 </tr>
 <tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
 <td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="http://oembed.com/" id="home-logo-link-18977"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/oEmbed.png" width="200" align="left" style="padding: 15px;" /></a>
+<a href="http://oembed.com/" id="home-name-link-18977" style="color: #000;"><strong>oEmbed</strong></a>
+oEmbed is a format for allowing an embedded representation of a URL on third party sites. The simple API allows a website to display embedded content (such as photos or videos) when a user posts a link to that resource, without having to parse the resource directly.
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://oembed.com/" target="_blank" title="Website" id="home-icon-18977"><img id="home-icon-img-18977" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="150" align="center" id="github-issue-18977" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
 <a href="http://ogp.me/" id="home-logo-link-18698"><img src="" width="200" align="left" style="padding: 15px;" /></a>
 <a href="http://ogp.me/" id="home-name-link-18698" style="color: #000;"><strong>The Open Graph Protocol</strong></a>
 The Open Graph protocol enables any web page to become a rich object in a social graph. For instance, this is used on Facebook to allow any web page to have the same functionality as any other object on Facebook.
@@ -89,24 +104,5 @@ The Open Graph protocol enables any web page to become a rich object in a social
 <td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
 <td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
 <td width="150" align="center" id="github-issue-18698" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
-</tr>
-<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr><td style="height: 18px; border-bottom: 1px solid #CCC;" colspan="8"></td></tr></table><tr>
-<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
-<a href="http://embed.ly/" id="home-logo-link-190"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/embedly-logo.png" width="200" align="left" style="padding: 15px;" /></a>
-<a href="http://embed.ly/" id="home-name-link-190" style="color: #000;"><strong>Embedly</strong></a>
-Embedly provides a platform and suite of tools to make embedding and previewing links simple. Embedly helps publishers and consumers manage embed codes from more than 100 Websites and APIs, including YouTube, Flickr, Ustream, Picassa, Hulu, Twitpic, Quantcast, and CrunchBase. It automatically convert links from these sources into embedded media on the fly.
-</td>
-<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://embed.ly/" target="_blank" title="Website" id="home-icon-190"><img id="home-icon-img-190" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
-</td>
-<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://twitter.com/weogeostatus" target="_blank" title="Blog" id="blog-icon-190"><img id="blog-icon-img-190" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="28" align="center" /></a>
-</td>
-<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="view-source:http://blog.embed.ly/rss" target="_blank" title="Blog RSS" id="blogrss-icon-190"><img id="blogrss-icon-img-190" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="28" align="center" /></a>
-</td>
-<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://twitter.com/embedly" target="_blank" title="Twitter" id="twitter-icon-190"><img id="twitter-icon-img-190" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="33" align="center" /></a>
-</td>
-<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://github.com/embedly" target="_blank" title="Github" id="github-icon-190"><img id="github-icon-img-190" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="35" align="center" /></a>
-</td>
-<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
-<td width="150" align="center" id="github-issue-190" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
 </tr>
 <tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr><td style="height: 18px; border-bottom: 1px solid #CCC;" colspan="8"></td></tr></table>
