update home page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: API Embeddables
 
     <p><strong><span style="font-size: 20px;">&#8620;</span>&nbsp;&nbsp;Top Links</strong></p>
     <ul class="featurelist">
+      <li><a href="http://apis.how/77gwfuzh1w">oEmbed</a></li>
       <li><a href="http://apis.how/85kt87ddrr">The Open Graph Protocol</a></li>
       <li><a href="http://apis.how/zehxq6ucco">SDKs.io</a></li>
     </ul>
@@ -66,7 +67,7 @@ title: API Embeddables
   <div class="span5" style="float: none; margin: 0 auto; display: inline-block;" align="right">
 
     <ul class="newslist" style="list-style: none; font-size: 14px; padding: 0px; margin: 0px;">
-      <li><a href="http://ide.apievangelist.com"><strong>Visit My Research On API IDEs&nbsp;&nbsp;<span style="font-size: 20px;">&#8667;</span></strong></a></li>
+      <li><a href="http://sds.apievangelist.com"><strong>Visit My Research On API SDKs&nbsp;&nbsp;<span style="font-size: 20px;">&#8667;</span></strong></a></li>
     </ul>
 
   </div>
@@ -85,7 +86,7 @@ title: API Embeddables
   <div class="span5" style="float: none; margin: 0 auto; display: inline-block;" align="right">
 
     <ul class="newslist" style="list-style: none; font-size: 14px; padding: 0px; margin: 0px;">
-      <li><a href="http://embeddable.apievangelist.com"><strong>Visit My Research Around Embeddables&nbsp;&nbsp;<span style="font-size: 20px;">&#8667;</span></strong></a></li>
+      <li><a href="http://webhooks.apievangelist.com"><strong>Visit My Research Around Webhooks&nbsp;&nbsp;<span style="font-size: 20px;">&#8667;</span></strong></a></li>
     </ul>
 
   </div>
@@ -106,7 +107,7 @@ title: API Embeddables
   <div class="span5" style="float: none; margin: 0 auto; display: inline-block;" align="right">
 
     <ul class="newslist" style="list-style: none; font-size: 14px; padding: 0px; margin: 0px;">
-      <li><a href="http://webhooks.apievangelist.com"><strong>Visit My Research On Webhooks&nbsp;&nbsp;<span style="font-size: 20px;">&#8667;</span></strong></a></li>
+      <li><a href="http://aggregation.apievangelist.com"><strong>Visit My Research On API Aggregation&nbsp;&nbsp;<span style="font-size: 20px;">&#8667;</span></strong></a></li>
     </ul>
 
   </div>
