--- a/journey/essentials/embeddable-tools-widgets.html
+++ b/journey/essentials/embeddable-tools-widgets.html
@@ -19,12 +19,10 @@ title: 'Widgets'
 </ul>
 </ul>
 </ul>
-</ul>
-</ul>
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="embeddable-tools-bookmarklet.html" class="older"><< Prev</a>
+<a href="embeddable-tools.html" class="older"><< Prev</a>
 <a href="embeddable-tools-buttons.html" class="newer" tabindex="0">Next >></a>
 </div>
 
