--- a/journey/essentials/embeddable-tools-buttons.html
+++ b/journey/essentials/embeddable-tools-buttons.html
@@ -25,7 +25,7 @@ title: 'Buttons'
 <!-- Pagination links -->
 <div class="pagination">
 <a href="embeddable-tools-widgets.html" class="older"><< Prev</a>
-<a href="/building-blocks.html" class="newer" tabindex="0">Next >></a>
+<a href="embeddable-tools-bookmarklet.html" class="newer" tabindex="0">Next >></a>
 </div>
 
 <table width="100%" border="0">
