Updating journey/business/embeddable-tools-bookmarklet.html via Laneworks CMS Publish

--- a/journey/business/embeddable-tools-bookmarklet.html
+++ b/journey/business/embeddable-tools-bookmarklet.html
@@ -19,11 +19,13 @@ title: 'Bookmarklet'
 </ul>
 </ul>
 </ul>
+</ul>
+</ul>
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="embeddable-tools.html" class="older"><< Prev</a>
-<a href="embeddable-tools-widgets.html" class="newer" tabindex="0">Next >></a>
+<a href="embeddable-tools-badges.html" class="older"><< Prev</a>
+<a href="/building-blocks.html" class="newer" tabindex="0">Next >></a>
 </div>
 
 <table width="100%" border="0">
