Updating journey/business/embeddable-tools-buttons.html via Laneworks CMS Publish

--- a/journey/business/embeddable-tools-buttons.html
+++ b/journey/business/embeddable-tools-buttons.html
@@ -24,8 +24,8 @@ title: 'Buttons'
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="embeddable-tools-badges.html" class="older"><< Prev</a>
-<a href="/building-blocks.html" class="newer" tabindex="0">Next >></a>
+<a href="embeddable-tools-widgets.html" class="older"><< Prev</a>
+<a href="embeddable-tools-badges.html" class="newer" tabindex="0">Next >></a>
 </div>
 
 <table width="100%" border="0">
