--- a/journey/politics/embeddable-tools-buttons.html
+++ b/journey/politics/embeddable-tools-buttons.html
@@ -19,13 +19,11 @@ title: 'Buttons'
 </ul>
 </ul>
 </ul>
-</ul>
-</ul>
 </div>
 <!-- Pagination links -->
 <div class="pagination">
-<a href="embeddable-tools-badges.html" class="older"><< Prev</a>
-<a href="/building-blocks.html" class="newer" tabindex="0">Next >></a>
+<a href="embeddable-tools.html" class="older"><< Prev</a>
+<a href="embeddable-tools-badges.html" class="newer" tabindex="0">Next >></a>
 </div>
 
 <table width="100%" border="0">
