--- a/journey/technology/embed-formats.html
+++ b/journey/technology/embed-formats.html
@@ -14,7 +14,7 @@ title: 'Embed Formats'
 </tr>
 </table>
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Embed Formats"}</p>
-<p></p>
+<p>What are the common embeddable formats available to API providers? There are two leading open formats available, that I track on.</p>
 <!-- Pagination links -->
 <div class="pagination">
 <a href="index.html" class="older"><< Prev</a>
