--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ title: API Evangelist - Embeddable
 
 <!-- Tools -->
 <a name="Tools"></a>
-{% assign approved_tags = 'API Specification,Generator,Validator,API Embeddable Guide,Data Specification,Embeddable Editor,Embeddable Notebook,Hypermedia,IDE,Semantics,gRPC' %}
+{% assign approved_tags = 'Embeddable' %}
 {% assign tool_content = site.data.tool_content.index[0] %}
 <section>
 	<header>
